# csv-pipeline

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: chain.rs  headers.rs  lib.rs  pipe.rs  pipeline.rs  pipeline_iterators.rs  target.rs  transform.rs
test/: Countries.csv
